feat: Configura o uso de variáveis de ambiente, e rota do swagger para os serviços.